--- a/.html
+++ b/.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Título de tu página web aquí</title>
+</head>
+<body>
+  <table>
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Edad</th>
+        <th>País</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>María</td>
+        <td>25</td>
+        <td>México</td>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>32</td>
+        <td>Estados Unidos</td>
+      </tr>
+    </tbody>
+  </table>
+</body>
+</html>
