--- a/index.html
+++ b/index.html
@@ -4,29 +4,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Título de tu página web aquí</title>
+  <title>Ron y Son Va</title>
+  <div class="logo">
+    <img src="logo.png" width="200" height="200" alt="Logo Academia">
+  </div>
+  <div class="menu">
+  <ul>
+    <li><a href="index.html">INICIO</a></li>
+    <li><a href="nosotros.html">STAFF</a></li>
+    <li><a href="nuestraclase.html">GALERÍA</a></li>
+    <li><a href="contacto.html">CONTACTO</a></li>
+    <li><a href="whatsapp.html">WHASTAPP</a> </li>
+  </ul>
+  </div>
 </head>
 <body>
-  <table>
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>Edad</th>
-        <th>País</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>María</td>
-        <td>25</td>
-        <td>México</td>
-      </tr>
-      <tr>
-        <td>John</td>
-        <td>32</td>
-        <td>Estados Unidos</td>
-      </tr>
-    </tbody>
-  </table>
+  <aside>
+    <h2>ACERCA DE ESTE SITIO</h2>
+    <p>Somos una Academia de Baile, que abre sus puertas en 2013. Desde entonces, ofrecemos clases de baile para todos los niveles
+      Te esperamos para aprender a bailar!
+    </p>
+  </aside>
+ 
 </body>
 </html>
