--- a/index.html
+++ b/index.html
@@ -4,27 +4,57 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <title>Ron y Son Va</title>
+</head>
   <div class="logo">
-    <img src="logo.png" width="200" height="200" alt="Logo Academia">
+    <img src="logo.png" width="300" height="300" alt="Logo Academia">
   </div>
   <div class="menu">
   <ul>
     <li><a href="index.html">INICIO</a></li>
-    <li><a href="nosotros.html">STAFF</a></li>
-    <li><a href="nuestraclase.html">GALERÍA</a></li>
+    <li><a href="staff.html">STAFF</a></li>
+    <li><a href="galeria.html">GALERÍA</a></li>
     <li><a href="contacto.html">CONTACTO</a></li>
     <li><a href="whatsapp.html">WHASTAPP</a> </li>
   </ul>
   </div>
-</head>
+  <br>
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle btn-lg" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Clases
+    </button>
+    <ul class="dropdown-menu dropdown-menu-dark">
+      <li><a class="dropdown-item" href="clasesprincipiantes.html">Clases Princiciantes</a></li>
+      <li><a class="dropdown-item" href="clasesintermedios.html">Clases Intermedios</a></li>
+      <li><a class="dropdown-item" href="clasesavanzados.html">Clases Avanzados</a></li>
+    </ul>
+  </div>
+  
+  
+
 <body>
-  <aside>
-    <h2>ACERCA DE ESTE SITIO</h2>
-    <p>Somos una Academia de Baile, que abre sus puertas en 2013. Desde entonces, ofrecemos clases de baile para todos los niveles
-      Te esperamos para aprender a bailar!
-    </p>
-  </aside>
- 
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
+<br>
+<br>
+<br>
+
+
+<footer>
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">facebook</a></li>
+      <li class="page-item"><a class="page-link" href="#">Instagram</a></li>
+      <li class="page-item">
+        </a>
+      </li>
+    </ul>
+  </nav>
+  
+</footer>
 </html>
